--- a/come/index.html
+++ b/come/index.html
@@ -77,6 +77,8 @@ ga('send', 'pageview');
 <script async src='//www.google-analytics.com/analytics.js'></script>
 
     <link rel="stylesheet" href="https://mignamis.github.io/css/custom.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
   </head>
   <body>
